# Skilled-Eagle_Lazer-Game

./: .gitignore  CMakeLists.txt  Makefile.due  README.md  Urenplanning en verantwoording themaopdracht Devices.xlsx  project.simp
Docs/: .~lock.RTOS onderzoek Simba.doc#  Project_lasertag.simp  RTOS onderzoek Simba.doc  Taakstructurering.docx  Teamcontract (klas v2a teamnummer 3).docx  class.puml  class.puml.rej  mscw vragen.docx  project lasertag.doc  ~$oject lasertag.doc
Docs/Picoscoop/: praktikum osciloscoop.doc
Docs/architecture/: Game STD en GameTime STD + Interfaces.docx  Game STD en GameTime STD + Interfaces.simp  Game STD en GameTime STD + Interfaces.simp.bak  Project_lasertag.simp  STD.simp  class.puml  concurency.simp  concurrency diagram.simp
Docs/onderzoek/: Free RTOS.docx  RTOS onderzoek  +appa.doc  RTOS onderzoek Simba.doc
Docs/planning/: MoSCoW.doc  Planning.xlsx  Practicum vragen + antwoorden.docx  Urenplanning en verantwoording themaopdracht Devices.xlsx  ~$cw vragen.docx
Source/: ButtonController.cpp  ButtonController.hpp  DisplayController.cpp  DisplayController.hpp  Doxyfile  GameController.cpp  GameController.hpp  GameTimeController.cpp  GameTimeController.hpp  Gamemodes.hpp  IRReceiver.cpp  IRReceiver.hpp  IRSender.cpp  IRSender.hpp  IR_Receiver.cpp  IR_Receiver.hpp  IR_Zender.cpp  IR_Zender.hpp  InitController.cpp  InitController.hpp  KeyPadController.cpp  KeyPadController.hpp  Makefile  RegisterController.cpp  RegisterController.hpp  SpeakerController.cpp  SpeakerController.hpp  Weapons.cpp  Weapons.hpp  enums.hpp  hwlib.hpp  main.cpp
Source/html/: _button_controller_8hpp_source.html  _display_controller_8hpp_source.html  _game_controller_8hpp_source.html  _game_time_controller_8hpp_source.html  _gamemodes_8hpp_source.html  _i_r_receiver_8hpp_source.html  _i_r_sender_8hpp_source.html  _init_controller_8hpp_source.html  _key_pad_controller_8hpp_source.html  _speaker_controller_8hpp_source.html  _weapons_8hpp_source.html  annotated.html  class_button_controller-members.html  class_button_controller.html  class_display_controller-members.html  class_display_controller.html  class_game_controller-members.html  class_game_controller.html  class_game_time_controller-members.html  class_game_time_controller.html  class_i_r_receiver-members.html  class_i_r_receiver.html  class_i_r_sender-members.html  class_i_r_sender.html  class_init_controller-members.html  class_init_controller.html  class_key_pad_controller-members.html  class_key_pad_controller.html  class_speaker_controller-members.html  class_speaker_controller.html  classes.html  doxygen.css  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  hwlib_8hpp_source.html  index.html  jquery.js  (+30 more)
Source/html/search/: all_0.html  all_1.html  all_1.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  (+50 more)
bmptk/: Makefile.local
ir-sensor/: main.cpp
tests/: encode_decoder_works.cpp  hwlib.hpp  ir-main-test.cpp  ir-receiver.cpp  ir-zender.cpp  working ir scan.txt
